# MedAI

./: .env.docker.example  .gitignore  .medai_pids  AGENTFORGE_HACKATHON_RULES_260204_103045.txt  DEPLOY.md  DEPLOY_GCP.md  LICENSE  LOGIN_FIX.md  PRODUCTION_READINESS.md  README.md  SCRIPTS.md  cloudbuild.yaml  diagrams.md  docker-compose.yml  medai-run.sh  medai-status.sh  medai-stop.sh  medai.db  medgemma_technical_report.txt  package-lock.json  run_e2e.sh
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  medai.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_08_0001_initial_tables.py  2026_02_09_0002_add_image_urls.py
backend/src/medai/: __init__.py  config.py  main.py
backend/storage/RPT-00FF5D74/: full_report.json
backend/storage/RPT-03C71AC4/: full_report.json
backend/storage/RPT-05746817/: full_report.json
backend/storage/RPT-06CA27DA/: full_report.json
backend/storage/RPT-0826BF79/: full_report.json
backend/storage/RPT-0A126C2B/: full_report.json
backend/storage/RPT-0B4F853A/: full_report.json
backend/storage/RPT-0E7D1B6E/: full_report.json
backend/storage/RPT-108112DE/: full_report.json
backend/storage/RPT-140B3C28/: full_report.json
backend/storage/RPT-14D4DE76/: full_report.json
backend/storage/RPT-16E3EAF9/: full_report.json
backend/storage/RPT-182F7111/: full_report.json
backend/storage/RPT-1ABB31A3/: full_report.json
backend/storage/RPT-1FDD216A/: full_report.json
backend/storage/RPT-2117A683/: full_report.json
backend/storage/RPT-23656038/: full_report.json
backend/storage/RPT-24ACAA80/: full_report.json
backend/storage/RPT-2A39D6BD/: full_report.json
backend/storage/RPT-2E075D4A/: full_report.json
backend/tests/: conftest.py  e2e_live_test.py  e2e_rag_report_output.json  e2e_report_output.json
(+213 files in other folders)
